tests/run/error_discard_read.out
tests/run/error_discard_read.em:7:13: error: undefined variable
